--- a/src/app/configurations/components/configurations/configurations.component.html
+++ b/src/app/configurations/components/configurations/configurations.component.html
@@ -1,13 +1,160 @@
-<div class="container mt-3">
+<div class="container my-3" *ngIf="configurationForm && imagesForm">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Configuracion</h4>
-    <button mat-raised-button color="primary" class="button">Actualizar</button>
+    <button [disabled]="configurationForm.invalid" (click)="sendData()" mat-raised-button color="primary" class="button">Actualizar</button>
   </div>
   <div class="mt-5 mb-5">
-    <mat-card> </mat-card>
+    <mat-card>
+      <div class="row">
+        <!-- nombre_sistema -->
+        <div class="col-lg-6 col-md-12">
+          <form *ngIf="configurationForm" [formGroup]="configurationForm">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Nombre del Sistema:</mat-label>
+              <input matInput formControlName="nombre_sistema" />
+              <mat-error *ngIf="systemNameFormControl?.errors?.required"> {{ 'El nombre del sistema es' }} <strong>requerido</strong> </mat-error>
+            </mat-form-field>
+
+            <!-- separador_decimales -->
+            <div class="d-flex justify-content-center align-items-center">
+              <mat-form-field class="w-100" appearance="outline" *ngIf="customDecimalSpliter.value == false">
+                <mat-label>Separador de decimales:</mat-label>
+                <mat-select formControlName="separador_decimales">
+                  <mat-option *ngFor="let item of decimalSpliter" [value]="item.id">{{ item.name }}</mat-option>
+                  <mat-option [value]="customDecimalSpliter.value">Personalizado</mat-option>
+                </mat-select>
+                <mat-error *ngIf="decimalSpliterFormControl?.errors?.required"> {{ 'El separador de decimales es' }} <strong>requerido</strong> </mat-error>
+              </mat-form-field>
+              <mat-form-field *ngIf="customDecimalSpliter.value == true" class="w-100" appearance="outline">
+                <mat-label>Separador de decimales:</mat-label>
+                <input matInput formControlName="separador_decimales" />
+              </mat-form-field>
+              <mat-checkbox class="ml-2 pb-3" [formControl]="customDecimalSpliter">Personalizado</mat-checkbox>
+            </div>
+
+            <!-- separador_miles -->
+            <div class="d-flex justify-content-center align-items-center">
+              <mat-form-field class="w-100" appearance="outline" *ngIf="customMillarSpliter.value == false">
+                <mat-label>Separador de Millares:</mat-label>
+                <mat-select formControlName="separador_miles">
+                  <mat-option *ngFor="let item of millarSpleiter" [value]="item.id">{{ item.name }}</mat-option>
+                  <mat-option [value]="customMillarSpliter.value">Personalizado</mat-option>
+                </mat-select>
+                <mat-error *ngIf="decimalSpliterFormControl?.errors?.required"> {{ 'El separador de decimales es' }} <strong>requerido</strong> </mat-error>
+              </mat-form-field>
+              <mat-form-field *ngIf="customMillarSpliter.value == true" class="w-100" appearance="outline">
+                <mat-label>Separador de Millares:</mat-label>
+                <input matInput formControlName="separador_miles" />
+              </mat-form-field>
+              <mat-checkbox class="ml-2 pb-3" [formControl]="customMillarSpliter">Personalizado</mat-checkbox>
+            </div>
+
+            <!-- formato_fecha -->
+            <div class="d-flex justify-content-center align-items-center">
+              <mat-form-field class="w-100" appearance="outline" *ngIf="customDateFormat.value == false">
+                <mat-label>Formato de Fecha:</mat-label>
+                <mat-select formControlName="formato_fecha">
+                  <mat-option *ngFor="let item of dateFormat" [value]="item.id">{{ item.name }}</mat-option>
+                  <mat-option [value]="customDateFormat.value">Personalizado</mat-option>
+                </mat-select>
+                <mat-error *ngIf="decimalSpliterFormControl?.errors?.required"> {{ 'El separador de decimales es' }} <strong>requerido</strong> </mat-error>
+              </mat-form-field>
+              <mat-form-field *ngIf="customDateFormat.value == true" class="w-100" appearance="outline">
+                <mat-label>Formato de Fecha:</mat-label>
+                <input matInput formControlName="formato_fecha" />
+              </mat-form-field>
+              <mat-checkbox class="ml-2 pb-3" [formControl]="customDateFormat">Personalizado</mat-checkbox>
+            </div>
+
+            <!-- formato_hora -->
+            <div class="d-flex justify-content-center align-items-center">
+              <mat-form-field class="w-100" appearance="outline" *ngIf="customTimeFormat.value == false">
+                <mat-label>Formato de Hora:</mat-label>
+                <mat-select formControlName="formato_hora">
+                  <mat-option *ngFor="let item of dateFormat" [value]="item.id">{{ item.name }}</mat-option>
+                  <mat-option [value]="customTimeFormat.value">Personalizado</mat-option>
+                </mat-select>
+                <mat-error *ngIf="decimalSpliterFormControl?.errors?.required"> {{ 'El separador de decimales es' }} <strong>requerido</strong> </mat-error>
+              </mat-form-field>
+              <mat-form-field *ngIf="customTimeFormat.value == true" class="w-100" appearance="outline">
+                <mat-label>Formato de Hora:</mat-label>
+                <input matInput formControlName="formato_hora" />
+              </mat-form-field>
+              <mat-checkbox class="ml-2 pb-3" [formControl]="customTimeFormat">Personalizado</mat-checkbox>
+            </div>
+          </form>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <form *ngIf="imagesForm" [formGroup]="imagesForm">
+            <!-- LOGO -->
+            <div>
+              <mat-label>Logo:</mat-label>
+              <div class="d-flex">
+                <ngx-dropzone class="w-50 h-auto" [multiple]="false" accept="image/jpeg,image/jpg,image/png,image/gif" (change)="onSelectLogo($event)">
+                  <ngx-dropzone-label>Arraste su nuevo logo aquí.</ngx-dropzone-label>
+                  <ngx-dropzone-image-preview
+                    ngProjectAs="ngx-dropzone-preview-logo"
+                    *ngFor="let f of logos"
+                    [file]="f"
+                    [removable]="true"
+                    (removed)="onRemoveLogo(f)"
+                  >
+                  </ngx-dropzone-image-preview>
+                </ngx-dropzone>
+                <div class="w-50 h-auto ml-2">
+                  <img class="w-100 h-auto" [src]="currentLogo" [alt]="currentLogo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- imagen_cabecera_informe -->
+            <div class="mt-3">
+              <mat-label class="my-2">Imagen de cabecera de Informe:</mat-label>
+              <div class="d-flex">
+                <ngx-dropzone class="w-50 h-auto" [multiple]="false" accept="image/jpeg,image/jpg,image/png,image/gif" (change)="onSelectHeaderImage($event)">
+                  <ngx-dropzone-label>Arraste su nueva imagen de cabecera de informe aquí.</ngx-dropzone-label>
+                  <ngx-dropzone-image-preview
+                    ngProjectAs="ngx-dropzone-preview-header"
+                    *ngFor="let f of headerImage"
+                    [file]="f"
+                    [removable]="true"
+                    (removed)="onRemoveHeaderImage(f)"
+                  >
+                  </ngx-dropzone-image-preview>
+                </ngx-dropzone>
+                <div class="w-50 h-auto ml-2">
+                  <img class="w-100 h-auto" [src]="currentHeaderImage" [alt]="currentHeaderImage" />
+                </div>
+              </div>
+            </div>
+
+            <!-- imagen_pie_firma_informe -->
+            <div class="mt-3">
+              <mat-label class="my-2">Imagen de pie de firma de informe:</mat-label>
+              <div class="d-flex">
+                <ngx-dropzone class="w-50 h-auto" [multiple]="false" accept="image/jpeg,image/jpg,image/png,image/gif" (change)="onSelectFooterImage($event)">
+                  <ngx-dropzone-label>Arraste su nueva imagen de pie de firma de informe aquí.</ngx-dropzone-label>
+                  <ngx-dropzone-image-preview
+                    ngProjectAs="ngx-dropzone-preview-footer"
+                    *ngFor="let f of footerImage"
+                    [file]="f"
+                    [removable]="true"
+                    (removed)="onRemoveFooterImage(f)"
+                  >
+                  </ngx-dropzone-image-preview>
+                </ngx-dropzone>
+                <div class="w-50 h-auto ml-2">
+                  <img class="w-100 h-auto" [src]="currentFooterImage" [alt]="currentFooterImage" />
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </mat-card>
   </div>
 
   <div class="d-flex justify-content-end align-items-center">
-    <button mat-raised-button color="primary" class="button">Actualizar</button>
+    <button [disabled]="configurationForm.invalid" (click)="sendData()" mat-raised-button color="primary" class="button">Actualizar</button>
   </div>
 </div>
